correct notifications while tg username, firstname, lastname can be empty